# TransferAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yaml  deploy-develop.yaml
src/: test_street_finder.py
src/apps/auth/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
src/apps/booking/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  test_booking.py  tests.py  urls.py  views.py
src/apps/monitoring/: urls.py  views.py
src/apps/payment/: admin.py  apps.py  models.py  serializers.py
src/apps/seat/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  views.py
src/apps/trip/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
src/apps/utils/: urls.py  views.py
src/apps/vehicle/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
src/bot/: api.py  handlers.py  main.py  setup.py  tools.py
src/bot/handlers/: auth_handlers.py  booking_handlers.py  common.py  feedback_handlers.py  info_handlers.py  meet_handlers.py
src/config/: logging.py  openapi.py  settings.py  urls.py
src/templates/: login.html
src/utils/: exception_handlers.py  find_street_by_name.py  is_location_exists.py  street_validate_regex.py
src/utils/address/: __init__.py  address_parser.py  address_validator.py  cache_utils.py  (+5 more)
(+26 files in other folders)
